namespace MedicineWarningAPI.DTOs
{
    public class DiseaseDto : NamedDto
    {
    }

    public class DiseaseCreateUpdateDto : NamedCreateUpdateDto
    {
    }
}
